tests/fw_rules_tests/policies/test12-networkpolicy.yaml

### Second policy. Allows to allow traffic from namespace default to namespace kube-system-new through ports 53 with UDP and TCP

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-default-to-kube-system-new-on-53-with-typo
  namespace: kube-system-new
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            unique-label: defaultNameSpace
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
